# UES

./: README.md  README.txt
Client/: CMakeLists.txt  client.c  definitions.c  definitions.h  menu.c  menu.h  state.h
Server/: CMakeLists.txt  column.c  column.h  definitions.c  definitions.h  evidence_system.c  evidence_system.h  server.c  table.c  table.h
Server/structures/: item.c  item.h  linked_list.c  linked_list.h
client/: CMakeLists.txt  client.c  definitions.c  menu.c  menu.h  state.h
server/: CMakeLists.txt  column.c  column.h  definitions.c  definitions.h  evidence_system.c  server.c
server/structures/: constants.h  linked_list.c
